Subida de archivos

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <img src="/imagen/producto/5fff46b00c1aa71120f51bdc-99.jpg?token=123" alt="" class="">
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
 
